# tdesktop

./: .clang-format  .gitmodules
Telegram/: CMakeLists.txt
Telegram/SourceFiles/: apiwrap.cpp  logs.cpp  mainwidget.cpp  mainwindow.cpp
Telegram/SourceFiles/api/: api_editing.cpp  api_updates.cpp
Telegram/SourceFiles/boxes/: about_box.cpp
Telegram/SourceFiles/calls/: calls_call.cpp  calls_instance.cpp
Telegram/SourceFiles/core/: crash_report_window.cpp  launcher.cpp  version.h
Telegram/SourceFiles/cu/: banner_widget.cpp  banner_widget.h  proto_fetch.cpp  proto_fetch.h
Telegram/SourceFiles/data/: data_session.cpp  data_types.cpp  data_user.h
Telegram/SourceFiles/dialogs/: dialogs_inner_widget.cpp  dialogs_widget.cpp  dialogs_widget.h
Telegram/SourceFiles/history/: history.cpp  history_inner_widget.cpp  history_item.cpp
Telegram/SourceFiles/intro/: intro_start.cpp
Telegram/SourceFiles/lang/: lang_cloud_manager.cpp
Telegram/SourceFiles/mtproto/: config_loader.cpp  connection_tcp.cpp  mtp_instance.cpp  mtp_instance.h  mtproto_dc_options.cpp
Telegram/SourceFiles/payments/: payments_form.cpp
Telegram/SourceFiles/platform/linux/: main_window_linux.cpp
Telegram/SourceFiles/platform/mac/: main_window_mac.mm  window_title_mac.mm
Telegram/SourceFiles/secgram/: SecgramCore.hpp
Telegram/SourceFiles/storage/: file_download.cpp  file_download.h  file_download_mtproto.cpp  file_upload.cpp  file_upload.h
Telegram/SourceFiles/window/: main_window.cpp
Telegram/Telegram/Images.xcassets/AppIcon.appiconset/: Contents.json
Telegram/cmake/: lib_tgcalls.cmake
Telegram/lib_secgram/: CMakeLists.txt
Telegram/lib_secgram/secgram/: SecgramCipher.hpp  SecgramConfigServer.cpp  SecgramConfigServer.hpp  SecgramCore.cpp  SecgramCore.hpp  SecgramData.hpp  secgram.cpp  secgram.hpp  ws.hpp
lib/xdg/: telegramdesktop.desktop  telegramdesktop.metainfo.xml.in
